--- a/src/componenets/body/theme-changer/themeChanger.css
+++ b/src/componenets/body/theme-changer/themeChanger.css
@@ -1,39 +1,50 @@
-/*Button Three*/
-.button-three {
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: #2c3e50;
+  background-image: none;
+}
+/* Remove IE arrow */
+select::-ms-expand {
+  display: none;
+}
+/* Custom Select */
+.select {
   position: relative;
-  background-color: #f39c12;
-  border: none;
-  padding: 20px;
-  width: 200px;
-  text-align: center;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  text-decoration: none;
+  display: flex;
+  width: 20em;
+  height: 3em;
+  line-height: 3;
+  background: #2c3e50;
   overflow: hidden;
+  border-radius: 0.25em;
 }
-
-.button-three:hover {
-  background: #fff;
-  box-shadow: 0px 2px 10px 5px #97b1bf;
-  color: #000;
+select {
+  flex: 1;
+  padding: 0 0.5em;
+  color: #fff;
+  cursor: pointer;
 }
-
-.button-three:after {
-  content: "";
-  background: #f1c40f;
-  display: block;
+/* Arrow */
+.select::after {
+  content: "\25BC";
   position: absolute;
-  padding-top: 300%;
-  padding-left: 350%;
-  margin-left: -20px !important;
-  margin-top: -120%;
-  opacity: 0;
-  transition: all 0.8s;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  background: #34495e;
+  cursor: pointer;
+  pointer-events: none;
+  -webkit-transition: 0.25s all ease;
+  -o-transition: 0.25s all ease;
+  transition: 0.25s all ease;
 }
-
-.button-three:active:after {
-  padding: 0;
-  margin: 0;
-  opacity: 1;
-  transition: 0s;
+/* Transition */
+.select:hover::after {
+  color: #f39c12;
 }
